# cancer-prediction-mm2075

./: .env  .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-publish.yml
cancer_prediction/: streamlit_app.py
docs/: index.md
test/: test_CancerModel.py
